[gd_scene load_steps=11 format=3 uid="uid://ck2g1dbq0ftuw"]

[ext_resource type="PackedScene" uid="uid://c3npgprfx7dy3" path="res://parts/arena/wall.tscn" id="1_73ib7"]
[ext_resource type="Script" path="res://screens/game/main.gd" id="1_sfxjc"]
[ext_resource type="PackedScene" uid="uid://clviqda8a1cvm" path="res://parts/arena/boulder02.tscn" id="2_csnvk"]
[ext_resource type="PackedScene" uid="uid://bqbuyddr8dux6" path="res://parts/arena/boulder01.tscn" id="3_g2ffr"]
[ext_resource type="PackedScene" uid="uid://d1pysshjlneof" path="res://parts/player/player.tscn" id="4_njsao"]
[ext_resource type="PackedScene" uid="uid://bce2tgdywe81f" path="res://parts/collectible/health_potion.tscn" id="5_stjyl"]
[ext_resource type="PackedScene" uid="uid://8el6tatppm3b" path="res://parts/entity_spawner/entity_spawner.tscn" id="6_m5tam"]
[ext_resource type="PackedScene" uid="uid://fi3mjcqh4sgj" path="res://parts/enemy/enemy.tscn" id="7_fdnlt"]
[ext_resource type="PackedScene" uid="uid://5x7umxfncme7" path="res://parts/game_over_menu/game_over_menu.tscn" id="8_tamld"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_hhrbv"]
vertices = PackedVector2Array(179, 986, 184, 987, -215, 913, 723, -138, 1379, -218, 1302, -69, 737, -69, 688, -73, 1324, 771, 1461, 919, 1108, 1023, 1065, 942, 1031, 839, 1611, 679, 1324, 626, 540, -169, 595, -70, 544, -74, 1597, -3, 1302, 76, 1108, 445, 1049, 334, 882, 234, 882, 76, 925, 414, 126, 382, 102, 242, 737, 234, 905, 468, 760, 468, 514, 463, 1073, 510, 904, 626, 980, 513, 543, 229, 944, 1015, -21, -74, -170, -185, 759, 771, 515, 766, 369, 463, -21, 71, 399, 71, 398, 229, -5, 236, 370, 621, -50, 621, -69, 396, 860, 840, 416, 878, 357, 767, 381, 943, 288, 946, 233, 847, -50, 766, 664, -249, 594, -257, -342, 284, -44, 284, 972, 822)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11, 12), PackedInt32Array(13, 9, 8, 14), PackedInt32Array(15, 16, 17), PackedInt32Array(4, 18, 19, 5), PackedInt32Array(19, 18, 13, 14, 20, 21), PackedInt32Array(22, 23, 19, 21, 24), PackedInt32Array(25, 26, 27, 22, 24, 28, 29, 30), PackedInt32Array(31, 20, 14), PackedInt32Array(31, 14, 32, 33), PackedInt32Array(33, 32, 28, 24), PackedInt32Array(34, 17, 16, 27), PackedInt32Array(35, 11, 10), PackedInt32Array(35, 10, 0), PackedInt32Array(15, 17, 36, 37), PackedInt32Array(29, 38, 39, 30), PackedInt32Array(25, 30, 40), PackedInt32Array(41, 42, 43, 26, 44), PackedInt32Array(25, 40, 45, 46, 47), PackedInt32Array(7, 6, 27, 16), PackedInt32Array(34, 27, 26, 43), PackedInt32Array(48, 35, 49, 50, 39, 38), PackedInt32Array(51, 49, 35), PackedInt32Array(51, 35, 0, 52), PackedInt32Array(53, 52, 0, 2, 54), PackedInt32Array(4, 3, 55), PackedInt32Array(56, 4, 55), PackedInt32Array(56, 55, 15, 37), PackedInt32Array(57, 37, 36, 41), PackedInt32Array(57, 41, 44, 58), PackedInt32Array(57, 58, 47, 2), PackedInt32Array(2, 47, 46, 54), PackedInt32Array(50, 53, 54), PackedInt32Array(50, 54, 39), PackedInt32Array(59, 48, 38), PackedInt32Array(59, 38, 8), PackedInt32Array(59, 8, 12)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-200, -223, 593, -298, 1396, -258, 1637, -20, 1652, 690, 1488, 953, 1112, 1064, 177, 1026, -249, 948, -384, 280)])
parsed_geometry_type = 1
source_geometry_mode = 1
agent_radius = 40.0

[node name="Main" type="Node"]
script = ExtResource("1_sfxjc")

[node name="Arena" type="Node2D" parent="."]

[node name="Wall" parent="Arena" instance=ExtResource("1_73ib7")]

[node name="Wall2" parent="Arena" instance=ExtResource("1_73ib7")]
position = Vector2(1303, 697)
rotation = -3.14159

[node name="Wall3" parent="Arena" instance=ExtResource("1_73ib7")]
position = Vector2(-29, 692)
scale = Vector2(1, -1)

[node name="Wall4" parent="Arena" instance=ExtResource("1_73ib7")]
position = Vector2(1281, 5)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="Boulder" parent="Arena" instance=ExtResource("2_csnvk")]
position = Vector2(31, 313)

[node name="Boulder2" parent="Arena" instance=ExtResource("3_g2ffr")]
position = Vector2(1018, 438)

[node name="Boulder3" parent="Arena" instance=ExtResource("3_g2ffr")]
position = Vector2(326, 871)

[node name="Boulder4" parent="Arena" instance=ExtResource("3_g2ffr")]
position = Vector2(633, -145)

[node name="Boulder5" parent="Arena" instance=ExtResource("2_csnvk")]
position = Vector2(973, 902)
rotation = 1.19687

[node name="OuterWalls" type="Polygon2D" parent="Arena"]
position = Vector2(0, -1)
color = Color(0.176471, 0.172549, 0.180392, 1)
invert_enabled = true
invert_border = 880.2
polygon = PackedVector2Array(-207, -229, 589, -296, 1395, -254, 1637, -17, 1655, 701, 1491, 956, 1113, 1072, 178, 1029, -248, 956, -379, 276)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_hhrbv")

[node name="Player" parent="." instance=ExtResource("4_njsao")]
position = Vector2(625, 304)

[node name="EnemySpawner" parent="." instance=ExtResource("6_m5tam")]
visible = false
entity_scene = ExtResource("7_fdnlt")

[node name="Marker2D" type="Marker2D" parent="EnemySpawner/Positions" index="0"]
position = Vector2(-189, 242)

[node name="Marker2D2" type="Marker2D" parent="EnemySpawner/Positions" index="1"]
position = Vector2(627, 379)

[node name="Marker2D3" type="Marker2D" parent="EnemySpawner/Positions" index="2"]
position = Vector2(648, 892)

[node name="Marker2D4" type="Marker2D" parent="EnemySpawner/Positions" index="3"]
position = Vector2(-93, 808)

[node name="Marker2D5" type="Marker2D" parent="EnemySpawner/Positions" index="4"]
position = Vector2(-64, 473)

[node name="Marker2D6" type="Marker2D" parent="EnemySpawner/Positions" index="5"]
position = Vector2(1151, 219)

[node name="Marker2D7" type="Marker2D" parent="EnemySpawner/Positions" index="6"]
position = Vector2(1398, 519)

[node name="Marker2D8" type="Marker2D" parent="EnemySpawner/Positions" index="7"]
position = Vector2(1270, 871)

[node name="Marker2D9" type="Marker2D" parent="EnemySpawner/Positions" index="8"]
position = Vector2(1429, 8)

[node name="Marker2D10" type="Marker2D" parent="EnemySpawner/Positions" index="9"]
position = Vector2(1020, -175)

[node name="Marker2D11" type="Marker2D" parent="EnemySpawner/Positions" index="10"]
position = Vector2(164, -163)

[node name="Marker2D12" type="Marker2D" parent="EnemySpawner/Positions" index="11"]
position = Vector2(635, -4)

[node name="HealthPotionSpawner" parent="." instance=ExtResource("6_m5tam")]
visible = false
entity_scene = ExtResource("5_stjyl")
spawn_interval = 20.0

[node name="Marker2D" type="Marker2D" parent="HealthPotionSpawner/Positions" index="0"]
position = Vector2(622, 360)

[node name="Marker2D2" type="Marker2D" parent="HealthPotionSpawner/Positions" index="1"]
position = Vector2(1412, 352)

[node name="Marker2D3" type="Marker2D" parent="HealthPotionSpawner/Positions" index="2"]
position = Vector2(-139, 387)

[node name="Marker2D4" type="Marker2D" parent="HealthPotionSpawner/Positions" index="3"]
position = Vector2(643, -243)

[node name="Marker2D5" type="Marker2D" parent="HealthPotionSpawner/Positions" index="4"]
position = Vector2(643, 779)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverMenu" parent="CanvasLayer" instance=ExtResource("8_tamld")]
visible = false

[node name="TimerUI" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="CanvasLayer/TimerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1232"
horizontal_alignment = 1

[connection signal="died" from="Player" to="." method="_on_player_died"]

[editable path="EnemySpawner"]
[editable path="HealthPotionSpawner"]
